--- a/CardGame/Server/Server.vcxproj.filters
+++ b/CardGame/Server/Server.vcxproj.filters
@@ -48,6 +48,12 @@
     <ClInclude Include="..\Multiplatform\NetworkCommunication.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\Shared\OpenSSL\aes.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Shared\OpenSSL\opensslconf.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Server.cpp">
