--- a/CardGame/CardGame/CardGame.vcxproj.filters
+++ b/CardGame/CardGame/CardGame.vcxproj.filters
@@ -71,6 +71,9 @@
     <ClCompile Include="..\Shared\Aes.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\Shared\Rsa.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="cardgame.h">
@@ -115,6 +118,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\Shared\Aes.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\Shared\Rsa.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
