--- a/CardGame/Server/Server.vcxproj.filters
+++ b/CardGame/Server/Server.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="..\Shared\Rsa.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\Shared\Sha.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Server.cpp">
@@ -87,6 +90,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\Shared\Rsa.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\Shared\Sha.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
