--- a/CardGame/Server/Server.vcxproj
+++ b/CardGame/Server/Server.vcxproj
@@ -92,6 +92,7 @@
     <ClInclude Include="..\Shared\Packet.h" />
     <ClInclude Include="..\Shared\networkServices.h" />
     <ClInclude Include="..\Shared\Rsa.h" />
+    <ClInclude Include="..\Shared\Sha.h" />
     <ClInclude Include="..\Shared\SharedDefines.h" />
     <ClInclude Include="Card.h" />
     <ClInclude Include="Game.h" />
@@ -105,6 +106,7 @@
     <ClCompile Include="..\Shared\networkServices.cpp" />
     <ClCompile Include="..\Shared\Packet.cpp" />
     <ClCompile Include="..\Shared\Rsa.cpp" />
+    <ClCompile Include="..\Shared\Sha.cpp" />
     <ClCompile Include="Card.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="serverGame.cpp" />
