--- a/CardGame/CardGame/CardGame.vcxproj
+++ b/CardGame/CardGame/CardGame.vcxproj
@@ -79,12 +79,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\Shared\Aes.cpp" />
+    <ClCompile Include="..\Crypto\Aes.cpp" />
+    <ClCompile Include="..\Crypto\Rsa.cpp" />
+    <ClCompile Include="..\Crypto\Sha.cpp" />
     <ClCompile Include="..\Shared\Guid.cpp" />
     <ClCompile Include="..\Shared\networkServices.cpp" />
     <ClCompile Include="..\Shared\Packet.cpp" />
-    <ClCompile Include="..\Shared\Rsa.cpp" />
-    <ClCompile Include="..\Shared\Sha.cpp" />
     <ClCompile Include="cardgame.cpp" />
     <ClCompile Include="ChatWindow.cpp" />
     <ClCompile Include="clientGame.cpp" />
@@ -135,12 +135,13 @@
     </CustomBuild>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\Shared\Aes.h" />
+    <ClInclude Include="..\Crypto\Aes.h" />
+    <ClInclude Include="..\Crypto\Keys\RSAPublicKey.h" />
+    <ClInclude Include="..\Crypto\Rsa.h" />
+    <ClInclude Include="..\Crypto\Sha.h" />
     <ClInclude Include="..\Shared\Guid.h" />
     <ClInclude Include="..\Shared\networkServices.h" />
     <ClInclude Include="..\Shared\Packet.h" />
-    <ClInclude Include="..\Shared\Rsa.h" />
-    <ClInclude Include="..\Shared\Sha.h" />
     <ClInclude Include="..\Shared\SharedDefines.h" />
     <ClInclude Include="clientGame.h" />
     <ClInclude Include="clientNetwork.h" />
