--- a/CardGame/Server/Server.vcxproj
+++ b/CardGame/Server/Server.vcxproj
@@ -86,13 +86,13 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\Crypto\Aes.h" />
+    <ClInclude Include="..\Crypto\Keys\RSAPrivateKey.h" />
+    <ClInclude Include="..\Crypto\Rsa.h" />
     <ClInclude Include="..\Multiplatform\NetworkCommunication.h" />
-    <ClInclude Include="..\Shared\Aes.h" />
     <ClInclude Include="..\Shared\Guid.h" />
     <ClInclude Include="..\Shared\Packet.h" />
     <ClInclude Include="..\Shared\networkServices.h" />
-    <ClInclude Include="..\Shared\Rsa.h" />
-    <ClInclude Include="..\Shared\Sha.h" />
     <ClInclude Include="..\Shared\SharedDefines.h" />
     <ClInclude Include="Card.h" />
     <ClInclude Include="Game.h" />
@@ -101,12 +101,11 @@
     <ClInclude Include="serverNetwork.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\Shared\Aes.cpp" />
+    <ClCompile Include="..\Crypto\Aes.cpp" />
+    <ClCompile Include="..\Crypto\Rsa.cpp" />
     <ClCompile Include="..\Shared\Guid.cpp" />
     <ClCompile Include="..\Shared\networkServices.cpp" />
     <ClCompile Include="..\Shared\Packet.cpp" />
-    <ClCompile Include="..\Shared\Rsa.cpp" />
-    <ClCompile Include="..\Shared\Sha.cpp" />
     <ClCompile Include="Card.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="serverGame.cpp" />
