--- a/CardGame/Server/Server.vcxproj
+++ b/CardGame/Server/Server.vcxproj
@@ -60,7 +60,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>..\Shared\libeay32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>..\Shared\libeay32.lib;..\DataBase\SQLite\sqlite3.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -79,7 +79,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>..\Shared\libeay32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>..\Shared\libeay32.lib;..\DataBase\SQLite\sqlite3.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -95,10 +95,13 @@
     <ClInclude Include="..\Shared\networkServices.h" />
     <ClInclude Include="..\Shared\SharedDefines.h" />
     <ClInclude Include="Card.h" />
+    <ClInclude Include="DataHolder.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="PacketHandler.h" />
     <ClInclude Include="serverGame.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="serverNetwork.h" />
+    <ClInclude Include="StaticHelper.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Crypto\Aes.cpp" />
@@ -107,11 +110,14 @@
     <ClCompile Include="..\Shared\networkServices.cpp" />
     <ClCompile Include="..\Shared\Packet.cpp" />
     <ClCompile Include="Card.cpp" />
+    <ClCompile Include="DataHolder.cpp" />
     <ClCompile Include="Game.cpp" />
+    <ClCompile Include="PacketHandler.cpp" />
     <ClCompile Include="serverGame.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Server.cpp" />
     <ClCompile Include="serverNetwork.cpp" />
+    <ClCompile Include="StaticHelper.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
