--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -78,6 +78,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>GenericNumberMethodTemplate.tt</DependentUpon>
     </Compile>
+    <Compile Include="Misc\Pair.cs" />
     <Compile Include="Security\AesEncryptor.cs" />
     <Compile Include="Security\RsaEncryptor.cs" />
     <Compile Include="UI\SlideShow.cs" />
