--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -129,8 +129,6 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <None Include="Assets\Data\data.db" />
-    <None Include="Assets\Data\sqlite3.exp" />
     <None Include="Misc\GenericNumberMethodTemplate.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>GenericNumberMethodTemplate.cs</LastGenOutput>
@@ -151,9 +149,6 @@
     <Resource Include="Assets\CardBackGrayscale.png" />
     <Resource Include="Assets\CardTemplate.png" />
     <Resource Include="Assets\close2.png" />
-    <Content Include="Assets\Data\sqlite3.def" />
-    <Content Include="Assets\Data\sqlite3.dll" />
-    <Content Include="Assets\Data\sqlite3.exe" />
     <Resource Include="Assets\IconWarrior.png" />
     <Resource Include="Assets\Loading.gif" />
     <Resource Include="Assets\Mage.png" />
@@ -167,6 +162,10 @@
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Assets\Demon.png" />
+    <Resource Include="Assets\Lich.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.96.0\build\net45\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.96.0\build\net45\System.Data.SQLite.Core.targets')" />
