--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ compiler:
 
 before_install:
   - sudo apt-get install sqlite3 libsqlite3-dev
-  - sudo apt-get install openssl libssl-dev
+  - sudo apt-get install libssl-dev
   
 script:
   - Server/Build
