--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,10 @@ before_install:
   - sudo apt-get install sqlite3 libsqlite3-dev
   - sudo apt-get install libssl-dev
   
+instal:
+  - sudo apt-get install -qq gcc-4.8 g++-4.8 
+  # We want to compile with g++ 4.8 when rather than the default g++
+  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 90
 script:
   - cd Server
   - chmod u+rx BUILD
