--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,10 @@ git:
 
 branches:
   only:
-    - master
+    - travis
 
 compiler:
-  - gcc
+  - clang
 
 before_install:
   - sudo apt-get install sqlite3 libsqlite3-dev
