Game/Log: added combat log

--- a/Client/Client.csproj
+++ b/Client/Client.csproj
@@ -74,6 +74,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Enums\AttackResult.cs" />
+    <Compile Include="Enums\CombatLogTypes.cs" />
     <Compile Include="Enums\CursorTypes.cs" />
     <Compile Include="Enums\SelectionType.cs" />
     <Compile Include="Game\Card\DefensiveCard.cs" />
