--- a/Server/Server.vcxproj
+++ b/Server/Server.vcxproj
@@ -84,10 +84,11 @@
     <ClInclude Include="Server\Cards\RangedCard.h" />
     <ClInclude Include="Server\DataHolder.h" />
     <ClInclude Include="Server\Game.h" />
-    <ClInclude Include="Server\Guid.h" />
     <ClInclude Include="Server\networkServices.h" />
-    <ClInclude Include="Server\Packet.h" />
-    <ClInclude Include="Server\PacketHandler.h" />
+    <ClInclude Include="Server\PacketHandlers\ByteBuffer.h" />
+    <ClInclude Include="Server\PacketHandlers\Guid.h" />
+    <ClInclude Include="Server\PacketHandlers\Packet.h" />
+    <ClInclude Include="Server\PacketHandlers\PacketHandler.h" />
     <ClInclude Include="Server\Player.h" />
     <ClInclude Include="Server\PlayerDefines.h" />
     <ClInclude Include="Server\serverGame.h" />
@@ -104,20 +105,21 @@
     <ClCompile Include="Crypto\Aes.cpp" />
     <ClCompile Include="Crypto\Rsa.cpp" />
     <ClCompile Include="Crypto\Sha.cpp" />
-    <ClCompile Include="Server\CardHandler.cpp" />
     <ClCompile Include="Server\Cards\Card.cpp" />
     <ClCompile Include="Server\Cards\DefensiveCard.cpp" />
     <ClCompile Include="Server\Cards\MeleeCard.cpp" />
     <ClCompile Include="Server\Cards\PlayableCard.cpp" />
     <ClCompile Include="Server\Cards\RangedCard.cpp" />
-    <ClCompile Include="Server\ChatHandler.cpp" />
     <ClCompile Include="Server\DataHolder.cpp" />
     <ClCompile Include="Server\Game.cpp" />
-    <ClCompile Include="Server\Guid.cpp" />
-    <ClCompile Include="Server\MiscHandler.cpp" />
     <ClCompile Include="Server\networkServices.cpp" />
-    <ClCompile Include="Server\Packet.cpp" />
-    <ClCompile Include="Server\PacketHandler.cpp" />
+    <ClCompile Include="Server\PacketHandlers\ByteBuffer.cpp" />
+    <ClCompile Include="Server\PacketHandlers\CardHandler.cpp" />
+    <ClCompile Include="Server\PacketHandlers\ChatHandler.cpp" />
+    <ClCompile Include="Server\PacketHandlers\Guid.cpp" />
+    <ClCompile Include="Server\PacketHandlers\MiscHandler.cpp" />
+    <ClCompile Include="Server\PacketHandlers\Packet.cpp" />
+    <ClCompile Include="Server\PacketHandlers\PacketHandler.cpp" />
     <ClCompile Include="Server\Player.cpp" />
     <ClCompile Include="Server\Server.cpp" />
     <ClCompile Include="Server\serverGame.cpp" />
